# python-web-hw08

./: README.md  pyproject.toml
first/: config.ini  connect.py  load_jsons.py  main.py  models.py
second/: config.ini  connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py
